enhanced part 1 to display the result in the page

--- a/p1.html
+++ b/p1.html
@@ -9,6 +9,10 @@
 </head>
 
 <body>
+    <div class="card">
+        <div id="result"></div>
+        <a class="btn" href="#" onclick="generate()" id="btn1">Générer</a>
+    </div>
     <script src="p1.js"></script>
 </body>
 
