--- a/p2.html
+++ b/p2.html
@@ -9,7 +9,15 @@
 </head>
 
 <body>
-
+    <div class="card">
+        <div id="result"></div>
+        <label for="iterations">Entrez le nombre de citations a générer</label>
+        <input type="number" name="iterations" id="iterations">
+        <br>
+        <a class="btn" href="#" onclick="start(1)" id="btn1">Citation(s) informatique</a>
+        <br>
+        <a class="btn" href="#" onclick="start(2)" id="btn1">Citation(s) jeux</a>
+    </div>
     <script src="p2.js"></script>
 </body>
 
