--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Générateur de citations</title>
 </head>
 
 <body>
     <div class="card">
+        <h1>Générateur de citations</h1>
         <a class="btn" href="p1.html">Partie 1</a>
         <a class="btn" href="p2.html">Partie 2</a>
     </div>
