--- a/p1.html
+++ b/p1.html
@@ -10,8 +10,11 @@
 
 <body>
     <div class="card">
+        <h1>Citations aléatoires</h1>
         <div id="result"></div>
         <a class="btn" href="#" onclick="generate()" id="btn1">Générer</a>
+        <br>
+        <a class="btn" href="index.html" onclick="start(2)" id="btn1">Retour au menu</a>
     </div>
     <script src="p1.js"></script>
 </body>
