added standalone server + router

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
     <title>Générateur de citations</title>
 </head>
 
 <body>
     <div class="card">
         <h1>Générateur de citations</h1>
-        <a class="btn" href="p1.html">Partie 1</a>
-        <a class="btn" href="p2.html">Partie 2</a>
+        <a class="btn" href="p1">Partie 1</a>
+        <a class="btn" href="p2">Partie 2</a>
     </div>
 </body>
 
