--- a/p1.html
+++ b/p1.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
     <title>Citations aléatoires</title>
 </head>
 
@@ -12,11 +12,11 @@
     <div class="card">
         <h1>Citations aléatoires</h1>
         <div id="result"></div>
-        <a class="btn" href="#" onclick="generate()" id="btn1">Générer</a>
+        <a class="btn" href="#" onclick="generate()">Générer</a>
         <br>
-        <a class="btn" href="index.html" onclick="start(2)" id="btn1">Retour au menu</a>
+        <a class="btn" href="/">Retour au menu</a>
     </div>
-    <script src="p1.js"></script>
+    <script src="/assets/js/p1.js"></script>
 </body>
 
 </html>
