--- a/p2.html
+++ b/p2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
     <title>Citations configurables</title>
 </head>
 
@@ -19,13 +19,13 @@
         <input type="number" min="1" max="5" id="valueInput" onchange="updateValue(this.value)" value="3"></span>
         <br>
         <br>
-        <a class="btn" href="#" onclick="start(1)" id="btn1">Citation(s) informatique</a>
+        <a class="btn" href="#" onclick="generate(1)">Citation(s) informatique</a>
         <br>
-        <a class="btn" href="#" onclick="start(2)" id="btn1">Citation(s) jeux</a>
+        <a class="btn" href="#" onclick="generate(2)">Citation(s) jeux</a>
         <br>
-        <a class="btn" href="index.html" onclick="start(2)" id="btn1">Retour au menu</a>
+        <a class="btn" href="/">Retour au menu</a>
     </div>
-    <script src="p2.js"></script>
+    <script src="/assets/js/p2.js"></script>
 </body>
 
 </html>
