fixed path issues if the site is in subfolder

--- a/p1.html
+++ b/p1.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Citations aléatoires</title>
 </head>
 
@@ -16,7 +16,8 @@
         <br>
         <a class="btn" href="/">Retour au menu</a>
     </div>
-    <script src="/assets/js/p1.js"></script>
+    <!-- <script>window.history.pushState('page2', 'Title', '/');</script> -->
+    <script src="assets/js/p1.js"></script>
 </body>
 
 </html>
