--- a/p2.html
+++ b/p2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Citations configurables</title>
 </head>
 
@@ -25,7 +25,7 @@
         <br>
         <a class="btn" href="/">Retour au menu</a>
     </div>
-    <script src="/assets/js/p2.js"></script>
+    <script src="assets/js/p2.js"></script>
 </body>
 
 </html>
