fixed all path bugs

--- a/p1.html
+++ b/p1.html
@@ -14,9 +14,8 @@
         <div id="result"></div>
         <a class="btn" href="#" onclick="generate()">Générer</a>
         <br>
-        <a class="btn" href="/">Retour au menu</a>
+        <a class="btn" href="./">Retour au menu</a>
     </div>
-    <!-- <script>window.history.pushState('page2', 'Title', '/');</script> -->
     <script src="assets/js/p1.js"></script>
 </body>
 
