--- a/p2.html
+++ b/p2.html
@@ -23,8 +23,8 @@
         <br>
         <a class="btn" href="#" onclick="generate(2)">Citation(s) jeux</a>
         <br>
-        <a class="btn" href="/">Retour au menu</a>
-    </div>
+        <a class="btn" href="./">Retour au menu</a>
+        </div>
     <script src="assets/js/p2.js"></script>
 </body>
 
