--- a/p1.html
+++ b/p1.html
@@ -4,18 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Générateur de citations écrit en JavaScript">
     <link rel="stylesheet" href="/assets/css/style.css">
     <title>Citations aléatoires</title>
 </head>
 
 <body>
-    <div class="card">
+    <article>
         <h1>Citations aléatoires</h1>
         <div id="result"></div>
+        <!-- Appel de la fonction generate() quand le bouton est activé-->
         <a class="btn" href="#" onclick="generate()">Générer</a>
         <br>
         <a class="btn" href="/">Retour au menu</a>
-    </div>
+    </article>
     <script src="/assets/js/p1.js"></script>
 </body>
 
