Added meta author

--- a/p2.html
+++ b/p2.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
     <meta name="description" content="Générateur de citations écrit en JavaScript">
+    <meta name="author" content="Célien AUPIAIS">
     <title>Citations configurables</title>
 </head>
 
