--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Générateur de citations écrit en JavaScript">
     <link rel="stylesheet" href="assets/css/style.css">
+    <meta name="author" content="Célien AUPIAIS">
     <title>Générateur de citations</title>
 </head>
 
